--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -27,8 +27,8 @@
         android:layout_marginStart="112dp"
         android:layout_marginEnd="90dp"
         android:ems="10"
+        android:hint="Name"
         android:inputType="text"
-        android:text="Name"
         app:layout_constraintBottom_toTopOf="@+id/editTextSurname"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -40,12 +40,14 @@
         android:id="@+id/editTextSurname"
         android:layout_width="226dp"
         android:layout_height="51dp"
+        android:layout_marginStart="112dp"
+        android:layout_marginEnd="90dp"
         android:ems="10"
+        android:hint="Surname"
         android:inputType="text"
-        android:text="Surname"
         app:layout_constraintBottom_toTopOf="@+id/textViewEnetrPassword"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextName"
         app:layout_constraintVertical_bias="0.5" />
@@ -54,10 +56,11 @@
         android:id="@+id/editTextPassword"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.477"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewEnetrPassword" />
 
@@ -65,12 +68,12 @@
         android:id="@+id/textViewEnetrPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="288dp"
+        android:layout_marginTop="316dp"
         android:text="Password"
         android:textColor="#171515"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.324"
+        app:layout_constraintHorizontal_bias="0.283"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
