--- a/app/src/main/res/layout/fragment_preview.xml
+++ b/app/src/main/res/layout/fragment_preview.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="user"
-            type="com.yavuz.groovyapp.User" />
+            type="com.yavuz.groovyapp.UserObservable" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -27,7 +27,7 @@
                 android:layout_marginTop="117dp"
                 android:layout_marginEnd="143dp"
                 android:textSize="24sp"
-                app:customText1="@{user.name}"
+                app:customText1="@{user.observable.surname}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
